--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@playwright/test": "^1.49.1",
-		"@sveltejs/adapter-node": "^5.2.11",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/adapter-node": "^0.0.18",
+		"@sveltejs/kit": "^2.20.2",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
@@ -69,6 +69,8 @@
 		"svelte"
 	],
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0"
+		"@inlang/paraglide-js": "^2.0.0",
+		"flowbite": "^3.1.2",
+		"flowbite-svelte": "^0.48.4"
 	}
 }
